# Pong-Clone-in-SFML

./: LICENSE  README.md
Pong/: CMakeLists.txt  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  Pong-Info.plist  main.cpp
Pong.xcodeproj/: project.pbxproj
Pong.xcodeproj/xcshareddata/xcschemes/: Pong.xcscheme
Pong.xcodeproj/xcuserdata/edgaralamillo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Pong.xcodeproj/xcuserdata/edgaralamillo.xcuserdatad/xcschemes/: xcschememanagement.plist
